--- a/questoes.html
+++ b/questoes.html
@@ -22,7 +22,7 @@
      Tudo bem enviar a localização em tempo real para pessoas que não são de confiança.
    </div>
     <div class="card_falso"> 
-        Não há problema em baixar qualquer arquivo sem se preocupar com vírus, caso pareça ser confiável.
+        Não há problemas em baixar qualquer arquivo sem se preocupar com vírus, caso pareça ser confiável.
     </div>
 </body>
 </html>
