--- a/questoes.html
+++ b/questoes.html
@@ -13,8 +13,8 @@
 
 <body>
     <h1 class="title2">VERDADEIRO OU FALSO?</h1>
-    <h2>Clique para saber!</h2>
-    <h3>Caso a afirmação seja falsa, a borda ficará vermelha e caso seja verdadeira, a borda ficará verde </h3>
+    <h2 class="subtitle">Clique para saber!</h2>
+    <h3 class="subtitle2">Caso a afirmação seja falsa, a borda ficará vermelha e caso seja verdadeira, a borda ficará verde </h3>
     <div class="card_falso">
      Tudo bem enviar a localização em tempo real para pessoas que não são de confiança.
     </div>
